test/bitfield3.l1.out
entry: var params, 7 locals, 0 temps
listref: 2 params, 0 locals, 0 temps
mkzas: 1 params, 3 locals, 0 temps
dispatch: var params, 6 locals, 0 temps
warning: name space references undefined type:
	foo
error: attempt to read object of undefined type: foo
                cval	(builtin function)
               entry	(bitfield3.l1:85)
